@@ -28,6 +28,10 @@ Build system:
   2002 and earlier)
   (David Allsopp)
 
+Bug fixes:
+- PR#7112: Aliased arguments ignored for equality of module types
+
+
 OCaml 4.03.0:
 -------------
 
